# climate-diffusion-mpi

./: .gitignore  README.md  T_final.nc  T_final.npy  pyproject.toml  test.py
src/climate_mpi/: __init__.py  cli.py  driver.py  grid.py  io_netcdf.py  parallel.py  physics.py
src/tests/: test_grid.py  test_parallel.py  test_physics.py
